# custom-chess-engine

./: CMakeLists.txt  README.md
include/: board.h  display.h  main.h  piece.h
src/: board.cpp  display.cpp  main.cpp
